<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.RegistrazioneActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbarReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/backLogin"
                android:layout_width="@dimen/sizeIcon"
                android:layout_height="@dimen/sizeIcon"
                android:layout_margin="5dp"
                android:layout_alignParentStart="true"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/arrow_left" />

            <TextView
                android:id="@+id/titleToolbarReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@+id/backLogin"
                android:layout_centerVertical="true"
                android:text="Crea Nuovo Account"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/sizeTextToolbar" />

        </RelativeLayout>


    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/layoutRegistrazione"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/layoutDati"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nome_registrazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/nome"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="@dimen/textSection" />

            <EditText
                android:id="@+id/cognome_registrazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="@string/cognome"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text" />


            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iconGenderReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/gender_male_female"
                    android:tint="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/sesso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/iconGenderReg"
                    android:text="@string/sesso"
                    android:textColor="@color/secondary_text"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteY="237dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/male"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:src="@drawable/male_white"
                        android:tint="@color/colorPrimaryDark" />

                    <ImageView
                        android:id="@+id/female"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="@dimen/sp16"
                        android:src="@drawable/female_white"
                        android:tint="@color/grey_trans" />


                </LinearLayout>


            </RelativeLayout>

            <EditText
                android:id="@+id/dataNascita_registrazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@drawable/calendar_text"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/data"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text" />

            <EditText
                android:id="@+id/telefono_registrazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/phone"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text" />


            <EditText
                android:id="@+id/email_registrazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/email_outline"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text" />


            <EditText
                android:id="@+id/password_registrazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/key"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text" />

            <EditText
                android:id="@+id/verificaPassword_registrazione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/key"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:hint="@string/ripeti_password"
                android:inputType="textPassword"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text" />


        </LinearLayout>


        <Button
            android:id="@+id/buttonRegistrati"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/registrati"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/buttonReset_registrazione"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_below="@+id/layoutDati"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/rosso"
            android:text="@string/reset"
            android:textColor="@color/white" />


    </RelativeLayout>
</LinearLayout>