<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutLogin"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.andreacarfora.justfit_cliente.Activities.LoginActivity">


        <TextView
            android:id="@+id/textLogoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/app_name"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp" />


    <RelativeLayout
        android:id="@+id/layoutEditToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_above="@+id/creaNuovoAccount"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
            android:drawablePadding="10sp"
            android:drawableTint="@color/white"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white_trans"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_login"
            android:layout_marginTop="@dimen/sp16"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/key"
            android:drawablePadding="10sp"
            android:drawableTint="@color/white"
            android:ems="10"
            android:hint="@string/password1"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white_trans"
            android:textSize="15sp" />


        <Button
            android:id="@+id/buttonReset"

            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_below="@+id/password_login"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sp16"
            android:background="@color/white"
            android:text="@string/reset"
            android:textColor="@color/rosso" />


        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonReset"
            android:layout_margin="12dp"
            android:padding="5dp"
            android:text="Password dimenticata"
            android:textAlignment="center"
            android:textColor="@color/white_trans"
            android:textSize="@dimen/textLabel"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/creaNuovoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="236dp"
        android:padding="@dimen/sp16"
        android:text="REGISTRATI"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/textSection"
        android:textStyle="bold" />


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_above="@+id/progressBar"
        android:layout_marginTop="@dimen/sp16"
        android:background="@color/white"
        android:text="Login"
        android:textSize="@dimen/textSection"
        style="?android:attr/borderlessButtonStyle"
        android:layout_centerHorizontal="true"
        android:textColor="@color/txt_profile" />



    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:indeterminate="false"
        android:layout_alignParentBottom="true"
        android:progressBackgroundTint="@color/white_trans"
        android:progressTint="@color/white"
        android:progressTintMode="multiply" />

</RelativeLayout>
